--- a/app/src/main/res/layout/activity_image_processing.xml
+++ b/app/src/main/res/layout/activity_image_processing.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ImageProcessingActivity">
+    tools:context=".image_processing.ImageProcessingActivity">
 
     <ImageView
         android:id="@+id/imageView"
