--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="bkg_green">#DCEDC8</color>
+    <color name="bkg_blue">#BBDEFB</color>
+    <color name="bkg_red">#FFCDD2</color>
+
+    <color name="white">#fff</color>
 </resources>
