--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,10 @@
     <style name="Text">
         <item name="android:textSize">14sp</item>
     </style>
+
+    <style name="StandardButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:textColor">@android:color/primary_text_light</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
